[gd_scene load_steps=38 format=3 uid="uid://co7awagts3133"]

[ext_resource type="PackedScene" uid="uid://cxgmcyb1poq1p" path="res://Assets/Models/Characters/Hacker/Hacker_T.glb" id="1_6hevv"]
[ext_resource type="Script" path="res://Hacker.gd" id="2_16sgt"]
[ext_resource type="Shader" path="res://Scenes/Characters/player_wire.gdshader" id="3_c4t06"]
[ext_resource type="Script" path="res://SpringArm_GP_S.gd" id="3_odbea"]
[ext_resource type="AnimationLibrary" uid="uid://ck35rh325ckl" path="res://Assets/Models/Characters/Animation/Anim2.res" id="3_sur1k"]
[ext_resource type="Script" path="res://Assets/UI/Hud.gd" id="4_fhrnc"]
[ext_resource type="AnimationLibrary" uid="uid://dcxau8v3t6yek" path="res://Assets/Animations/Manbot.res" id="5_a5b5q"]
[ext_resource type="PackedScene" uid="uid://c2gd0yw1gwrx4" path="res://Assets/UI/mapCube/Map_subview.tscn" id="5_m35cy"]
[ext_resource type="PackedScene" uid="uid://b7i26dwsefhlq" path="res://Scenes/PauseMenu.tscn" id="7_etc15"]
[ext_resource type="AudioStream" uid="uid://dvnnhcvhsmqqg" path="res://Assets/audio/SFX/Stepcon/e.ogg" id="12_ucd4a"]
[ext_resource type="AudioStream" uid="uid://c6pu5x23ultj7" path="res://Assets/audio/SFX/Stepcon/f.ogg" id="13_7mugb"]
[ext_resource type="AudioStream" uid="uid://bnf37jwlxh1rd" path="res://Assets/audio/SFX/Stepcon/g.ogg" id="14_fan1y"]
[ext_resource type="AudioStream" uid="uid://do4ykt01yy3n5" path="res://Assets/audio/SFX/Stepcon/h.ogg" id="15_8dkij"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_80y7b"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1abnl"]
next_pass = SubResource("ShaderMaterial_80y7b")
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q8c6m"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4fujw"]
next_pass = SubResource("ShaderMaterial_q8c6m")
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4u7pa"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_24lc3"]
next_pass = SubResource("ShaderMaterial_4u7pa")
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vcuk1"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2oj16"]
next_pass = SubResource("ShaderMaterial_vcuk1")
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h54my"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bgtuo"]
next_pass = SubResource("ShaderMaterial_h54my")
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w6oxd"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_66u5x"]
next_pass = SubResource("ShaderMaterial_w6oxd")
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rr13c"]
render_priority = 0
shader = ExtResource("3_c4t06")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/outline_width = 3.0

[sub_resource type="Animation" id="Animation_ppgjc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Step:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Run:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b83fh"]
_data = {
"RESET": SubResource("Animation_ppgjc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dfvqk"]
animation = &"Manbot/Fall1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u51wd"]
animation = &"Manbot/Idle1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2dl1e"]
animation = &"Manbot/run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yfirh"]
animation = &"Manbot/walk2"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_hbu2o"]
xfade_time = 0.2
input_0/name = "grounded"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "air"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeBlend3" id="AnimationNodeBlend3_3c3it"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_57q2r"]
graph_offset = Vector2(-51.9165, 104.504)
nodes/Air/node = SubResource("AnimationNodeAnimation_dfvqk")
nodes/Air/position = Vector2(400, 400)
nodes/Idle/node = SubResource("AnimationNodeAnimation_u51wd")
nodes/Idle/position = Vector2(220, 60)
nodes/Run/node = SubResource("AnimationNodeAnimation_2dl1e")
nodes/Run/position = Vector2(140, 400)
nodes/Walk/node = SubResource("AnimationNodeAnimation_yfirh")
nodes/Walk/position = Vector2(120, 220)
nodes/ground_air_transition/node = SubResource("AnimationNodeTransition_hbu2o")
nodes/ground_air_transition/position = Vector2(640, 160)
nodes/iwr_blend/node = SubResource("AnimationNodeBlend3_3c3it")
nodes/iwr_blend/position = Vector2(420, 160)
nodes/output/position = Vector2(860, 160)
node_connections = [&"ground_air_transition", 0, &"iwr_blend", &"ground_air_transition", 1, &"Air", &"iwr_blend", 0, &"Idle", &"iwr_blend", 1, &"Walk", &"iwr_blend", 2, &"Run", &"output", 0, &"ground_air_transition"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6us32"]
radius = 0.283343
height = 1.84319

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0q2et"]
random_pitch = 1.3
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("12_ucd4a")
stream_1/stream = ExtResource("13_7mugb")
stream_2/stream = ExtResource("14_fan1y")
stream_3/stream = ExtResource("15_8dkij")

[node name="Player" instance=ExtResource("1_6hevv")]
script = ExtResource("2_16sgt")

[node name="GeneralSkeleton" parent="Armature" index="0"]
bones/0/position = Vector3(0.00224832, 0.949974, -0.00742829)
bones/0/rotation = Quaternion(-0.0381658, -0.366487, -0.0141456, 0.929533)
bones/1/rotation = Quaternion(0.0491827, 0.0401574, -0.00818944, 0.997949)
bones/2/rotation = Quaternion(0.0981782, 0.080836, -0.0179071, 0.991719)
bones/3/rotation = Quaternion(0.0981905, 0.0808815, -0.0179227, 0.991714)
bones/4/rotation = Quaternion(-0.0297822, -0.0107706, 0.00187317, 0.999497)
bones/5/rotation = Quaternion(-0.0636323, 0.177339, -0.00823639, 0.982056)
bones/9/rotation = Quaternion(0.522575, 0.462476, 0.535301, -0.475902)
bones/10/rotation = Quaternion(0.0474456, 0.840319, -0.528331, 0.111707)
bones/11/rotation = Quaternion(0.284341, -0.599438, 0.297985, 0.686316)
bones/12/rotation = Quaternion(-0.0834002, 0.791805, 0.101958, 0.596401)
bones/13/rotation = Quaternion(-0.134806, 0.724941, 0.225976, 0.636571)
bones/14/rotation = Quaternion(0.000611805, 0.00152529, -0.00735645, 0.999972)
bones/15/rotation = Quaternion(4.47035e-08, 1.04308e-07, -5.96046e-08, 1)
bones/17/rotation = Quaternion(0.0382306, -0.00597163, 0.0617231, 0.997343)
bones/18/rotation = Quaternion(0.146533, -0.000859946, -0.00653443, 0.989184)
bones/19/rotation = Quaternion(0, 0, -1.49012e-08, 1)
bones/21/rotation = Quaternion(0.129991, 0.00481561, -0.0790815, 0.988345)
bones/22/rotation = Quaternion(0.195031, -0.00139925, 0.0147548, 0.980685)
bones/23/rotation = Quaternion(-4.47035e-08, 0, 4.47035e-08, 1)
bones/25/rotation = Quaternion(0.269995, -0.015771, -0.124325, 0.954671)
bones/26/rotation = Quaternion(0.280882, 0.00176229, 0.0244589, 0.959429)
bones/27/rotation = Quaternion(0, 0, 8.9407e-08, 1)
bones/29/rotation = Quaternion(0.296028, -0.0168191, -0.158039, 0.941864)
bones/30/rotation = Quaternion(0.341461, 0.0114222, 0.0500109, 0.938495)
bones/31/rotation = Quaternion(-3.50177e-06, -8.9407e-08, -0.000229478, 1)
bones/33/rotation = Quaternion(0.4877, -0.487078, -0.582171, -0.431255)
bones/34/rotation = Quaternion(0.186179, 0.83984, -0.502414, -0.0870989)
bones/35/rotation = Quaternion(0.292889, 0.669007, -0.219886, 0.646758)
bones/36/rotation = Quaternion(0.152454, -0.739213, 0.00740283, 0.655948)
bones/37/rotation = Quaternion(-0.202416, -0.627933, -0.172319, 0.73146)
bones/38/rotation = Quaternion(0.1634, -0.0787665, -0.0104604, 0.983355)
bones/39/rotation = Quaternion(-4.47035e-08, 1.49012e-08, -5.96046e-08, 1)
bones/41/rotation = Quaternion(0.0474351, 0.0101488, 0.00839675, 0.998788)
bones/42/rotation = Quaternion(0.166871, 0.000690534, 0.00782642, 0.985947)
bones/43/rotation = Quaternion(1.04308e-07, 0, 5.96047e-08, 1)
bones/45/rotation = Quaternion(0.110941, 0.00858961, 0.024856, 0.993479)
bones/46/rotation = Quaternion(0.28498, 0.00153369, -0.0187448, 0.958349)
bones/47/rotation = Quaternion(-8.9407e-08, -2.98023e-08, -8.9407e-08, 1)
bones/49/rotation = Quaternion(0.197583, -0.00768629, 0.0666051, 0.977991)
bones/50/rotation = Quaternion(0.330858, -0.00243346, -0.0347652, 0.943037)
bones/51/rotation = Quaternion(2.98023e-08, -2.98023e-08, 2.98023e-08, 1)
bones/53/rotation = Quaternion(0.207168, -0.0111483, 0.0920807, 0.973899)
bones/54/rotation = Quaternion(0.359668, -0.0126601, -0.0693989, 0.93041)
bones/55/rotation = Quaternion(4.47035e-08, 5.96046e-08, 1.04606e-05, 1)
bones/57/rotation = Quaternion(0.0775775, 0.22042, 0.966765, -0.103747)
bones/58/rotation = Quaternion(0.0384286, 0.947374, -0.294944, -0.118382)
bones/59/rotation = Quaternion(-0.0442898, 0.67146, -0.738082, 0.0491393)
bones/60/rotation = Quaternion(0.028037, 0.999369, 0.0203823, -0.00770922)
bones/62/rotation = Quaternion(-0.123748, 0.0237342, 0.983895, 0.126779)
bones/63/rotation = Quaternion(0.0260381, 0.955472, -0.284096, -0.0753934)
bones/64/rotation = Quaternion(0.0997242, 0.559237, -0.815491, -0.110826)
bones/65/rotation = Quaternion(0.00368185, 0.999858, 0.0160728, -0.00355078)

[node name="Wolf3D_Facewear" parent="Armature/GeneralSkeleton" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_1abnl")
surface_material_override/2 = SubResource("StandardMaterial3D_4fujw")
surface_material_override/3 = SubResource("StandardMaterial3D_24lc3")
surface_material_override/4 = SubResource("StandardMaterial3D_2oj16")
surface_material_override/5 = SubResource("StandardMaterial3D_bgtuo")
surface_material_override/6 = SubResource("StandardMaterial3D_66u5x")

[node name="Wolf3D_Glasses" parent="Armature/GeneralSkeleton" index="3"]
surface_material_override/0 = SubResource("ShaderMaterial_rr13c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
audio_max_polyphony = 1
libraries = {
"": SubResource("AnimationLibrary_b83fh"),
"Anim2": ExtResource("3_sur1k"),
"Manbot": ExtResource("5_a5b5q")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
callback_mode_process = 0
tree_root = SubResource("AnimationNodeBlendTree_57q2r")
anim_player = NodePath("../AnimationPlayer")
parameters/ground_air_transition/current_state = "grounded"
parameters/ground_air_transition/transition_request = ""
parameters/ground_air_transition/current_index = 0
parameters/iwr_blend/blend_amount = -1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.908729, 0)
shape = SubResource("CapsuleShape3D_6us32")

[node name="SpringArmPivot" type="Node3D" parent="." index="4"]
script = ExtResource("3_odbea")

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
spring_length = 2.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/SpringArm3D" index="0"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)

[node name="AudioListener3D" type="AudioListener3D" parent="SpringArmPivot/SpringArm3D/Camera3D" index="0"]

[node name="mapdebug" type="Control" parent="SpringArmPivot/SpringArm3D/Camera3D" index="1"]
layout_mode = 3
anchors_preset = 0
offset_right = 636.0
offset_bottom = 347.0
script = ExtResource("4_fhrnc")

[node name="mapGlobality" type="Label" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="0"]
visible = false
layout_mode = 0
offset_right = 146.0
offset_bottom = 75.0

[node name="mapTech" type="Label" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="1"]
visible = false
layout_mode = 0
offset_top = 138.0
offset_right = 148.0
offset_bottom = 211.0

[node name="mapEconomy" type="Label" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="2"]
visible = false
layout_mode = 0
offset_top = 75.0
offset_right = 115.0
offset_bottom = 138.0

[node name="state" type="Label" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="3"]
visible = false
layout_mode = 0
offset_top = 268.0
offset_right = 40.0
offset_bottom = 291.0

[node name="resilience" type="Label" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="4"]
visible = false
layout_mode = 0
offset_top = 295.0
offset_right = 40.0
offset_bottom = 318.0

[node name="autonomy" type="Label" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="5"]
visible = false
layout_mode = 0
offset_top = 318.0
offset_right = 40.0
offset_bottom = 341.0

[node name="Cube View" parent="SpringArmPivot/SpringArm3D/Camera3D/mapdebug" index="6" instance=ExtResource("5_m35cy")]
layout_mode = 0
offset_top = 567.0
offset_right = 512.0
offset_bottom = 1079.0

[node name="RayCast3D" type="RayCast3D" parent="." index="5"]

[node name="Step" type="AudioStreamPlayer3D" parent="." index="6"]
stream = SubResource("AudioStreamRandomizer_0q2et")
volume_db = -80.0
autoplay = true
bus = &"Steps"

[node name="Run" type="AudioStreamPlayer3D" parent="." index="7"]
stream = SubResource("AudioStreamRandomizer_0q2et")
volume_db = -80.0
autoplay = true
bus = &"Steps"

[node name="Pause" parent="." index="8" instance=ExtResource("7_etc15")]
